--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "apis/main.py"
+            "dest": "api/main.py"
         }
     ]
 }
